<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaxiTwin</string>
    <string name="action_show_options">Show options</string>
    <string name="action_responses">Responses</string>
    <string name="action_exit">Exit</string>
    <string-array name="action_list">
        <item>Map view</item>
        <item>List view</item>
    </string-array>
    <string name="google_play_services_error_title">Google Play Services not found</string>
    <string name="google_play_services_error_message">Google Play Services were not found on your device and there is nothing I can do about it.</string>
    <string name="close">Close</string>
    <string name="gps_alert_title">GPS not enabled</string>
    <string name="gps_alert_message">TaxiTwin require for its run GPS module. Turn on your GPS or close the application.</string>
    <string name="location_settings">Location settings</string>
    <string name="internet_alert_title">No Internet connection</string>
    <string name="internet_alert_message">TaxiTwin has to be connected to the Internet otherwise it will not work properly</string>
    <string name="connection_settings">Connection settings</string>
    <string name="waiting_for_signal">Waiting for GPS signal</string>
    <string name="address">Address</string>
    <string name="nop">Number of passengers</string>
    <string name="radius">Radius</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="pref_address">pref_address</string>
    <string name="pref_address_long">pref_address_long</string>
    <string name="pref_address_lat">pref_address_lat</string>
    <string name="pref_radius">pref_radius</string>
    <string name="pref_passengers">pref_passengers</string>
    <string name="place_error_title">Address not found</string>
    <string name="place_error_message">Address that you provided cannot be found. Please choose one of the choices from the list.</string>
    <string name="address_alert_title">Address not filled</string>
    <string name="address_alert_message">You did not provide your home address. Application cannot create or search TaxiTwin offers without this information.</string>
    <string name="pref_gcm_id">pref_gcm_id</string>
    <string name="passengers"> passengers</string>
    <string name="offer_detail">Offer detail</string>
    <string name="offer_error_title">Offer not found</string>
    <string name="offer_error_message">Offer you are trying to accept is no longer available</string>
    <string name="responses">Responses</string>
    <string name="response_detail">Response detail</string>
    <string name="response_notification_title">TaxiTwin response</string>
    <string name="response_notification_content">You have new TaxiTwin responses</string>
    <string name="decline">Decline</string>
    <string name="response_error_title">Response not found</string>
    <string name="response_error_message">Response you are trying to accept is no longer available</string>
    <string name="action_leave_taxitwin">Leave TaxiTwin</string>
    <string name="taxitwin_notification_title">TaxiTwin</string>
    <string name="taxitwin_notification_content">You are now part of a TaxiTwin</string>
    <string name="taxitwin_alert_title">TaxiTwin</string>
    <string name="taxitwin_alert_message">One of your responses were accepted. You are now part of a TaxiTwin.</string>
    <string name="enter">Enter</string>
    <string name="leave">Leave</string>
    <string name="leave_taxitwin_alert_title">You are about to leave TaxiTwin</string>
    <string name="leave_taxitwin_alert_message">Are you sure you want to leave current TaxiTwin?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="my_taxitwin">My TaxiTwin</string>
    <string name="taxitwin_no_longer_notification_title">TaxiTwin</string>
    <string name="taxitwin_no_longer_notification_content">TaxiTwin you were part of no longer exists.</string>
    <string name="taxitwin_no_longer_alert_title">TaxiTwin</string>
    <string name="taxitwin_no_longer_alert_content">TaxiTwin you were part of no longer exists.</string>
    <string name="services_alert_title">Service problem</string>
    <string name="services_network_alert_message">Your network connection has stopped working. Application will not work correctly.</string>
    <string name="services_gps_alert_message">Your GPS connection has stopped working. Application will not work correctly.</string>
</resources>
